--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<script src="client.js"></script>
-<link rel="stylesheet" href="style.css">
+<script src="public/client.js"></script>
+<link rel="stylesheet" href="public/style.css">
 
 <h1 class="title">Remote node</h1>
 
