--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<script src="public/client.js"></script>
-<link rel="stylesheet" href="public/style.css">
-
-<h1 class="title">Remote node</h1>
-
-<form class="js-submit">
-    <textarea class="input js-input"></textarea>
-    <button type="submit" class="submit">Run</button>
-</form>
-
-<h2 class="sub-title">Result</h2>
-<pre class="result js-result">No results yet...</pre>
+<link href="https://fonts.googleapis.com/css?family=Inconsolata|Roboto" rel="stylesheet">
+<div id="app"></div>
+<script src="main.js"></script>
